--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -4,18 +4,18 @@
         <div class="perfil-photo-container">
             <img src="/Imagenes/FotoPerfil.jpg" alt="Foto de perfil" class="perfil-photo">
         </div>
-        <h1 class="perfil-nombre">@ViewBag.Usuario.nombre</h1>
-        <h3 class="perfil-fecha">@ViewBag.Usuario.fechaNacimiento</h3>
+        <h1 class="perfil-nombre">@ViewBag.Usuario.username</h1>
+        <h3 class="perfil-fecha">@ViewBag.Usuario.fechaNacimiento.ToString("dd/MM/yyyy")</h3>
     </div>
 
     <!-- Información del perfil -->
     <div class="perfil-info">
         <div class="perfil-campo">
-            <span class="perfil-label">Objetivos: @ViewBag.Usuario.Objetivo</span>
+            <span class="perfil-label">Objetivos:</span>
             <div class="perfil-value">
-                @if(ViewBag.Usuario.Objetivo != null)
+                @if(ViewBag.Usuario.objetivo != null && !string.IsNullOrWhiteSpace(ViewBag.Usuario.objetivo))
                 {
-                    @ViewBag.Usuario.Objetivo
+                    @ViewBag.Usuario.objetivo
                 }
             </div>
         </div>
@@ -23,11 +23,11 @@
         <div class="perfil-separador"></div>
 
         <div class="perfil-campo">
-            <span class="perfil-label">Descripción: @ViewBag.Usuario.Descripción</span>
+            <span class="perfil-label">Descripción:</span>
             <div class="perfil-value">
-                @if(ViewBag.Usuario.Descripción != null)
+                @if(ViewBag.Usuario.descripcion != null && !string.IsNullOrWhiteSpace(ViewBag.Usuario.descripcion))
                 {
-                    @ViewBag.Usuario.Descripción
+                    @ViewBag.Usuario.descripcion
                 }
             </div>
         </div>
