mejore el sign in, y empece a modificar el perfil... pero tiene erorres

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -6,8 +6,8 @@
 
     <form action='@Url.Action("guardarLogin","Account")' method="POST">
         <section>
-            <input type="text" name="username" placeholder="Username"/>
-            <input type="password" name="password" placeholder="Password"/>
+            <input type="text" name="username" placeholder="Username" required/>
+            <input type="password" name="password" placeholder="Password" required/>
             <h4>Forgot password?</h4>
             <input type="submit" value="Log in"/>
         </section>
