--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -1,7 +1,7 @@
     <main>
         <div>
             <img src="/Imagenes/FotoPerfil.jpg" alt="Perfil">
-            <h1>@ViewBag.Usuario.nombre</h1>
+            <h1>@ViewBag.Usuario.username</h1>
             <h3>@ViewBag.Usuario.fechaNacimiento</h3>
             @if(ViewBag.Usuario.Objetivo != null)
             {
