--- a/Views/Account/SignIn.cshtml
+++ b/Views/Account/SignIn.cshtml
@@ -1,26 +1,40 @@
-    <main>
+<main class="signin-page">
 
     <div class="centrar">
         <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
         <h1 class="titulo">Create Account</h1>
     </div>
 
-        <form action='@Url.Action("guardarSignIn","Account")' method="POST"> 
+    <form action='@Url.Action("guardarSignIn","Account")' method="POST" class="signin-form"> 
         
-            <input type="text"  placeholder="Email" name="email" />
-            <input type="text"  placeholder="Username" name="username"/>
-            <input type="password"  placeholder="Password" name="password" />
-            <input type="date"  placeholder="Fecha de Nacimiento" name="fechaNacimiento" />
-        
-            <input type="radio" name="recibeNotis" />
-            <label>Recibir Notificación</label>
-        
-            <input type="submit" value="Sign In">
-        
-        </form>
-        
-        <div class="centrar">
-        <a href='@Url.Action("Index","Home")' class="back-arrow">&#8629;</a>
+        <div class="form-group">
+            <input type="email" placeholder="Email" name="email" required />
         </div>
 
-    </main>
+        <div class="form-group">
+            <input type="text" placeholder="Username" name="username" required />
+        </div>
+
+        <div class="form-group">
+            <input type="password" placeholder="Password" name="password" required />
+        </div>
+
+        <div class="form-group">
+            <label for="fechaNacimiento" class="date-label">Fecha de Nacimiento</label>
+            <input type="date" id="fechaNacimiento" name="fechaNacimiento" required />
+        </div>
+
+        <div class="form-group checkbox-group">
+            <input type="checkbox" id="recibeNotis" name="recibeNotis" />
+            <label for="recibeNotis">Recibir Notificaciones</label>
+        </div>
+    
+        <input type="submit" value="Sign In">
+    
+    </form>
+    
+    <div class="centrar">
+        <a href='@Url.Action("Index","Home")' class="back-arrow">&#8629;</a>
+    </div>
+
+</main>
