--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,11 +11,17 @@
     margin:0px;
     padding:0px;
     box-sizing: border-box;
+
   }
-  
+
+  @import url('https://fonts.googleapis.com/css2?family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap');
+
   body
   {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', sans-serif;
+    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', sans-serif; */
+    font-family: 'Zain', sans-serif;
+    font-weight: 400;
+    font-style: normal;
     background-color: var(--color-fondo);
     min-height: 100vh;
     display: flex;
