--- a/Views/Home/PlayList.cshtml
+++ b/Views/Home/PlayList.cshtml
@@ -6,36 +6,19 @@
             </div>
 
             <section>
+                    @for(int i = 0; i > ViewBag.Playlist.count; i++)
+                {
                 <div>
-                    <img src="" alt="FotoPlaylist">
-                    <h2>Nombre Playlist</h2>
+                    <img src= @item.foto alt="FotoPlaylist">
+                    <h2> @ViewBag.Playlist[i].titulo </h2>
                     <button onclick="Play()">Play</button>
-                    <p>Tag</p>
-                    <p>Tag</p>
+                    @foreach(Tags item in ViewBag.["Tags"+i])
+                    {
+                       <p>@item.titulo</p> 
+                    }
                 </div>
 
-                <div>
-                    <img src="" alt="FotoPlaylist">
-                    <button onclick="Play()">Play</button>
-                    <a href="">Play</a>
-                    <p>Tag</p>
-                    <p>Tag</p>
-                </div>
+                }
 
-                <div>
-                    <img src="" alt="FotoPlaylist">
-                    <h2>Nombre Playlist</h2>
-                    <button onclick="Play()">Play</button>
-                    <p>Tag</p>
-                    <p>Tag</p>
-                </div>
-
-                <div>
-                    <img src="" alt="FotoPlaylist">
-                    <h2>Nombre Playlist</h2>
-                    <button onclick="Play()">Play</button>
-                    <p>Tag</p>
-                    <p>Tag</p>
-                </div>
             </section>
     </main>
