--- a/Views/Home/PlayList.cshtml
+++ b/Views/Home/PlayList.cshtml
@@ -6,7 +6,7 @@
             </div>
 
             <section>
-                    @for(int i = 0; i > ViewBag.Playlist.count; i++)
+                    @for(int i = 0; i < ViewBag.Playlist.count; i++)
                 {
                 <div>
                     <img src= @item.foto alt="FotoPlaylist">
