--- a/Views/Home/PlayList.cshtml
+++ b/Views/Home/PlayList.cshtml
@@ -6,13 +6,13 @@
             </div>
 
             <section>
-                    @for(int i = 0; i > ViewBag.Playlist.count; i++)
+                    @for(int i = 0; i > ViewBag.Playlists.count; i++)
                 {
                 <div>
-                    <img src= @item.foto alt="FotoPlaylist">
+                    <img src= @ViewBag.Playlists[i].foto alt="FotoPlaylist">
                     <h2> @ViewBag.Playlist[i].titulo </h2>
                     <button onclick="Play()">Play</button>
-                    @foreach(Tag item in ViewBag.["Tags"+i])
+                    @foreach(Tag item in ViewBag.listaTags[i])    
                     {
                        <p>@item.titulo</p> 
                     }
