--- a/Views/Home/Estadisticas.cshtml
+++ b/Views/Home/Estadisticas.cshtml
@@ -59,7 +59,7 @@
 
             <section> 
 
-            <div>
+            <!-- <div>
               <h2 id="mensual1">
                 @item horas
               </h2>
@@ -81,7 +81,7 @@
               <h2 id="mensual4">
                 @item horas
               </h2>
-            </div>
+            </div> -->
 
             
             </section>
