css hecho en appsocio_catalogo en desktop y falta arreglar el mobile

--- a/Views/Home/AppsDeOcio_Catalogo.cshtml
+++ b/Views/Home/AppsDeOcio_Catalogo.cshtml
@@ -1,6 +1,8 @@
+<main class="apps-ocio-page">
+
 <h1>Apps de Ocio</h1>
 
-<a href="#">
+<a href='@Url.Action("")'>
     <img src="/Imagenes/add-icon.png" />
     Seleccionar app de ocio
 
@@ -25,3 +27,4 @@
     }
 
 </section>
+</main>
