casi terminado estadisticas (ilan feli a)

--- a/Views/Home/Estadisticas.cshtml
+++ b/Views/Home/Estadisticas.cshtml
@@ -2,7 +2,7 @@
 
             <section> 
             
-              <div>
+              <div class=>
 
                  <h2 id="dia"> @ViewBag.horaDiaria horas </h2>
 
@@ -59,29 +59,29 @@
 
             <section> 
 
-            <!-- <div>
+            <div>
               <h2 id="mensual1">
-                @item horas
+                @ViewBag.horasMensuales horas
               </h2>
             </div>
 
             <div>
               <h2 id="mensual2">
-                @item horas
+                @ViewBag.horasMensuales horas
               </h2>
             </div>
 
             <div>
               <h2 id="mensual3">
-                @item horas
+                @ViewBag.horasMensuales horas
               </h2>
             </div>
 
             <div>
               <h2 id="mensual4">
-                @item horas
+                @ViewBag.horasMensuales horas
               </h2>
-            </div> -->
+            </div>
 
             
             </section>
