--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -157,6 +157,18 @@
       gap: 20px;
       margin: 30px 0;
   }
+
+  .estadistica
+  {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .estadistica div
+  {
+    background-color: var(--color-fondo-div);
+  }
   
   .centrar
   {
