--- a/Views/Home/Estadisticas.cshtml
+++ b/Views/Home/Estadisticas.cshtml
@@ -57,37 +57,34 @@
             
             </section>
 
-<<<<<<< HEAD
             <section> 
 
             <div>
               <h2 id="mensual1">
-                @ViewBag.horasMensuales horas
+                @ViewBag.horasMensuales[0] horas
               </h2>
             </div>
 
             <div>
               <h2 id="mensual2">
-                @ViewBag.horasMensuales horas
+                @ViewBag.horasMensuales[1] horas
               </h2>
             </div>
 
             <div>
               <h2 id="mensual3">
-                @ViewBag.horasMensuales horas
+                @ViewBag.horasMensuales[2] horas
               </h2>
             </div>
 
             <div>
               <h2 id="mensual4">
-                @ViewBag.horasMensuales horas
+                @ViewBag.horasMensuales[3] horas
               </h2>
             </div>
 
             
             </section>
-=======
->>>>>>> c479c8fc7d50f76268bb4c172c5adcab94386ac7
 
 
 
