arregle la view de estadisticas

--- a/Views/Home/Estadisticas.cshtml
+++ b/Views/Home/Estadisticas.cshtml
@@ -1,8 +1,8 @@
         <h1>Tiempo de productividad</h1>
 
-            <section> 
+            <section id="seccion-diario">  
             
-              <div class=>
+              <div>
 
                  <h2 id="dia"> @ViewBag.horaDiaria horas </h2>
 
@@ -10,7 +10,7 @@
 
             </section>
 
-            <section>
+            <section id="seccion-semanal">
 
                 <div>
 
@@ -57,7 +57,7 @@
             
             </section>
 
-            <section> 
+            <section id="seccion-mensual" > 
 
             <div>
               <h2 id="mensual1">
