Carrusel de estadisticas arreglado

--- a/Views/Home/Estadisticas.cshtml
+++ b/Views/Home/Estadisticas.cshtml
@@ -118,5 +118,6 @@
                  <div class="plata"><img src="" alt="AppPlata"></div>
                  <div class="oro"><img src="" alt="AppOro"></div>
             </div>
-    
+
     <script src="~/js/estadisticas.js"></script>
+        <script>pasar(0);</script>
