appsOcioNoSeleccionadas medio terminado

--- a/Views/Home/AppsDeOcio_Catalogo.cshtml
+++ b/Views/Home/AppsDeOcio_Catalogo.cshtml
@@ -2,7 +2,7 @@
 
 <h1>Apps de Ocio</h1>
 
-<a href='@Url.Action("")'>
+<a href='@Url.Action("Pasar", "Home", new { Direccion = "AppsDeOcio_Selector" })'>
     <img src="/Imagenes/add-icon.png" />
     Seleccionar app de ocio
 
