agregar apps medio terminado

--- a/Views/Home/AppsDeOcio_Catalogo.cshtml
+++ b/Views/Home/AppsDeOcio_Catalogo.cshtml
@@ -12,11 +12,11 @@
 
     @foreach (AppOcio item in @ViewBag.listaAppsOcio)
     {
-        <div id="app_@item.id">
+        <div id="app_@item.ID">
             <img src="/Imagenes/@item.foto/" />
 
             @item.titulo
-            <input type="image" src="/Imagenes/delete-icon.png" onclick="EliminarApp(@item.id)" />
+            <input type="image" src="/Imagenes/delete-icon.png" onclick="EliminarApp(@item.ID)"/>
         </div>
     }
 
