--- a/Views/Home/AppsDeOcio_Selector.cshtml
+++ b/Views/Home/AppsDeOcio_Selector.cshtml
@@ -4,15 +4,14 @@
 
     @foreach (AppOcio item in @ViewBag.listaAppsNoAsociadas)
     {
-        <div>
+        <div id="noApp_@item.ID">
             <img src="/Imagenes/@item.foto/" />
 
             @item.titulo
 
-            <a href='@Url.Action("eliminarAppOcio", "Home", new { IDAppOcio = item.id })'>
+            <a href='@Url.Action("agregarAppOcio", "Home", new { IDAppOcio = item.ID })'>
 
-
-                <img src="/Imagenes/delete-icon.png" />
+                <input type="image" src="/Imagenes/delete-icon.png" onclick="AgregarApp(@item.ID)"/>
 
             </a>
         </div>
